# agent-template-python

./: .gitignore  Makefile  README.md  copier.yml  pytest.ini  typos.local.toml  typos.toml
.github/: dependabot.yml
template/: AGENTS.md  AGENTS.md.jinja  Makefile  Makefile.jinja  README.md  README.md.jinja  pyproject.toml  pyproject.toml.jinja  {% if en_gb_oxendict %}typos.toml{% endif %}
template/.github/: dependabot.yml.jinja  get-postgresql
template/.github/workflows/: act-validation.yml.jinja  audit.yml.jinja  ci.yml.jinja  coverage-main.yml.jinja  mutation-testing.yml.jinja  release.yml.jinja  {% if mutmut_supported or use_rust %}mutation-testing.yml{% endif %}.jinja
template/.rules/: python-00.md
template/docs/: complexity-antipatterns-and-refactoring-strategies.md  contents.md.jinja  developers-guide.md  developers-guide.md.jinja  scripting-standards.md  users-guide.md.jinja
template/rust_extension?_if=use_rust/: Cargo.toml
template/rust_extension?_if=use_rust/src/: lib.rs
template/rust_extension?_if=use_rust/tests/: basic.rs  test_bindings.py
template/tests/: test_public_api.py.jinja  test_stub.py.jinja  {% if en_gb_oxendict %}test_generate_typos_config.py{% endif %}
template/{% if en_gb_oxendict %}scripts{% endif %}/: generate_typos_config.py
template/{% if use_rust %}rust_extension{% endif %}/: Cargo.toml.jinja  clippy.toml
template/{% if use_rust %}rust_extension{% endif %}/src/: lib.rs.jinja
template/{{ package_name }}/: __init__.py  __init__.py.jinja  _runtime.py.jinja  hooks.py  pure.py  pure.py.jinja  types.py
(+35 files in other folders)
