[package]
name = "{{ package_name }}_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "_{{ package_name }}_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
once_cell = "1"
data-encoding = "2"
uuid = { version = "1", features = ["v4", "v7"] }
